objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>STK-{00000}</displayFormat>
        <label>Stock Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>