objects/Inventory__c/fields/In_Hand_Quantity__c.field-meta.xml
<CustomField>
    <fullName>In_Hand_Quantity__c</fullName>
    <formula>Total_Received__c-Total_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Hand Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>