objects/Inventory__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <label>Invoiced Quantity</label>
    <summarizedField>Inventory_Transaction__c.Invoiced_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>