objects/Inventory__c/fields/IsEdited__c.field-meta.xml
<CustomField>
    <fullName>IsEdited__c</fullName>
    <formula>CreatedDate  &lt;&gt;  LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEdited</label>
    <type>Checkbox</type>
</CustomField>