objects/Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventories (Location)</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>