objects/Inventory__c/fields/Maximum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Stock_Level__c</fullName>
    <label>Maximum Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>