objects/Inventory__c/fields/Maximum_Stock_Level_In_Product__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Stock_Level_In_Product__c</fullName>
    <formula>Product__r.Maximum_stock_level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>