objects/Inventory__c/fields/Minimum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Level__c</fullName>
    <label>Minimum Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>