objects/Inventory__c/fields/Minimum_Stock_Reached__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Reached__c</fullName>
    <formula>And(In_Hand_Quantity__c &lt;= Product__r.Min_Stock__c,Not(ISNULL(Product__r.Min_Stock__c)),Not(ISNULL(Product__r.Maximum_stock_level__c)))</formula>
    <label>Minimum Stock Reached</label>
    <type>Checkbox</type>
</CustomField>