objects/Inventory__c/fields/Moving_Status__c.field-meta.xml
<CustomField>
    <fullName>Moving_Status__c</fullName>
    <formula>IF( NOT(ISNULL(Recent_Sold__c) ),
IF((TODAY()-Recent_Sold__c)&lt;=30,&quot;Active&quot;,
IF(AND((TODAY()-Recent_Sold__c)&gt;30, (TODAY()-Recent_Sold__c)&lt;=60),&quot;Slow moving&quot;,
IF(AND((TODAY()-Recent_Sold__c)&gt;60, (TODAY()-Recent_Sold__c)&lt;=120),&quot;Inactive&quot;,&quot;Obsolete&quot;
)
)
),&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moving Status</label>
    <type>Text</type>
</CustomField>