objects/Inventory__c/fields/Out_Of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Of Stock</label>
    <type>Checkbox</type>
</CustomField>