objects/Inventory__c/fields/Out_Of_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Stocks__c</fullName>
    <formula>In_Hand_Quantity__c  &lt;=  Minimum_Stock_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Of Stock</label>
    <type>Checkbox</type>
</CustomField>