objects/Inventory__c/fields/Product_code__c.field-meta.xml
<CustomField>
    <fullName>Product_code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product code</label>
    <type>Text</type>
</CustomField>