objects/Inventory__c/fields/Re_order_stock_level__c.field-meta.xml
<CustomField>
    <fullName>Re_order_stock_level__c</fullName>
    <formula>Product__r.Min_Stock__c</formula>
    <label>Re-order stock level</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>