objects/Inventory__c/fields/Recent_Sold__c.field-meta.xml
<CustomField>
    <fullName>Recent_Sold__c</fullName>
    <label>Recent Sold</label>
    <summarizedField>Inventory_Transaction__c.TransferDate__c</summarizedField>
    <summaryFilterItems>
        <field>Inventory_Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>