objects/Inventory__c/fields/Storage_bin__c.field-meta.xml
<CustomField>
    <fullName>Storage_bin__c</fullName>
    <label>Storage bin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Define Bin Types</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>