objects/Inventory__c/fields/Storage_Section__c.field-meta.xml
<CustomField>
    <fullName>Storage_Section__c</fullName>
    <label>Storage Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Section 1</fullName>
            </value>
            <value>
                <fullName>Section 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>