objects/Inventory__c/fields/Supplier_Cost_price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Cost_price__c</fullName>
    <formula>Product__r.Supplier_Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier cost price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>