objects/Inventory__c/fields/Total_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered__c</fullName>
    <label>Total Delivered</label>
    <summarizedField>Inventory_Transaction__c.Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Inventory_Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>