objects/Inventory__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <label>Total Invoiced</label>
    <summaryFilterItems>
        <field>Inventory_Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Invoiced</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>