objects/Inventory__c/fields/Total_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Received__c</fullName>
    <label>Total Received</label>
    <summarizedField>Inventory_Transaction__c.Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Inventory_Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>