objects/Inventory__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>