objects/Inventory__c/validationRules/Stock_In_Hand.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_In_Hand</fullName>
    <active>false</active>
    <errorConditionFormula>IF(In_Hand_Quantity__c&lt;0,true,false)</errorConditionFormula>
    <errorMessage>Insufficient stock from the warehouse.</errorMessage>
</ValidationRule>